--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "body-parser": "^1.17.1",
     "concurrently": "^3.4.0",
     "express": "^4.15.2",
+    "fontawesome": "^4.7.2",
+    "material-ui": "^0.18.0",
     "nodemon": "^1.11.0",
+    "normalize": "^0.3.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "socket.io": "^1.7.3"
   },
   "boilerplate": {
