--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "axios": "^0.16.1",
     "font-awesome": "^4.7.0",
+    "material-ui": "^0.18.0",
     "normalize.css": "^6.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router-dom": "next",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
     "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
