--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "font-awesome": "^4.7.0",
     "material-ui": "^0.18.0",
     "normalize.css": "^6.0.0",
+    "nuka-carousel": "^2.0.4",
+    "office-ui-fabric-react": "^2.25.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -14,7 +16,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
-    "socket.io-client": "^1.7.3"
+    "socket.io-client": "^1.7.3",
+    "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
