--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "socket.io-client": "^1.7.3",
-    "yelp-fusion": "^1.0.3"
+    "yelp-fusion": "^1.0.3",
     "uuid": "^3.0.1"
 
   },
