--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "normalize": "^0.3.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-fa": "^4.2.0",
+    "react-fontawesome": "^1.6.1",
+    "react-icons": "^2.2.5",
+    "react-native-vector-icons": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "socket.io": "^1.7.3"
