--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "concurrently": "^3.4.0",
     "express": "^4.15.2",
     "fontawesome": "^4.7.2",
+    "google-maps-react": "^1.0.19",
+    "lodash": "^4.17.4",
     "material-ui": "^0.18.0",
     "nodemon": "^1.11.0",
     "normalize": "^0.3.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-google-map": "^3.0.1",
+    "react-google-maps": "^6.3.0",
+    "react-google-maps-loader": "^2.0.2",
+    "react-helmet": "^5.0.3",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "socket.io": "^1.7.3"
