--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-maps-react": "^1.0.19",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.0",
+    "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
     "normalize": "^0.3.1",
     "react": "^15.5.4",
