--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-helmet": "^5.0.3",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
-    "socket.io": "^1.7.3"
+    "sha1": "^1.1.1",
+    "socket.io": "^1.7.3",
+    "uuid": "^3.0.1"
   },
   "boilerplate": {
     "name": "express-react-boilerplate",
