--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "body-parser": "^1.17.1",
+    "bufferutil": "^3.0.0",
+    "concurrently": "^3.4.0",
+    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "material-ui": "^0.18.0",
+    "nodemon": "^1.11.0",
     "normalize.css": "^6.0.0",
     "nuka-carousel": "^2.0.4",
     "office-ui-fabric-react": "^2.25.1",
+    "rapidapi-connect": "^0.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -16,9 +23,11 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
+    "socket.io": "^2.0.1",
     "socket.io-client": "^1.7.3",
-    "yelp-fusion": "^1.0.3",
-    "uuid": "^3.0.1"
+    "utf-8-validate": "^3.0.1",
+    "uuid": "^3.0.1",
+    "yelp-fusion": "^1.0.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
