--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-google-maps": "^6.3.0",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
     "socket.io": "^1.7.3"
