--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,8 @@
     "nodemon": "^1.11.0",
     "normalize.css": "^6.0.0",
     "nuka-carousel": "^2.0.4",
-    "office-ui-fabric-react": "^2.25.1",
-    "rapidapi-connect": "^0.0.4",
+    "office-ui-fabric-react": "^2.28.0",
+    "rapidapi-connect": "0.0.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
@@ -25,7 +25,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
     "socket.io": "^2.0.1",
-    "socket.io-client": "^1.7.3",
+    "socket.io-client": "^1.7.4",
     "utf-8-validate": "^3.0.1",
     "uuid": "^3.0.1",
     "yelp-fusion": "^1.0.3"
@@ -39,5 +39,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "main": "index.js",
+  "license": "MIT"
 }
