--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "fontawesome": "^4.7.2",
     "google-map-react": "^0.24.0",
     "google-maps-react": "^1.0.19",
+    "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.0",
+    "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.6",
     "rapidapi-connect": "^0.0.4",
@@ -32,7 +34,9 @@
     "react-slick": "^0.14.11",
     "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
-    "socket.io": "^1.7.3"
+    "sha1": "^1.1.1",
+    "socket.io": "^1.7.3",
+    "uuid": "^3.0.1"
   },
   "boilerplate": {
     "name": "express-react-boilerplate",
