--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mapbox/point-geometry": "^0.1.0",
+    "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "concurrently": "^3.4.0",
     "cors": "^2.8.3",
